...
    on<UpdateItineraryData>(_onItineraryDataUpdated);
  }

  FutureOr<void> _onLoadTrip(
      LoadTrip event, Emitter<TripManagementState> emit) async {
    if (_tripManagement.tripMetadatas.contains(event.tripMetaDataFacade)) {
      var trip = await _tripManagement.retrieveTrip(
          tripMetaData: event.tripMetaDataFacade as TripMetaData,
          isNewlyCreatedTrip: event.isNewlyCreatedTrip);
      _tripManagement.setActiveTrip(trip);
      emit(LoadedTrip(tripFacade: trip));
      emit(ExpenseViewUpdated.showExpenseList());
    }
...
